--- a/web/app/public/sass/playlist.scss
+++ b/web/app/public/sass/playlist.scss
@@ -17,7 +17,7 @@
         background: #EEE;
 
         &.hide-video {
-            max-height: 66px;
+            max-height: 112px;
             min-height: 1px;
             overflow: hidden;
 
